# ArchiveVault

./: .gitignore  README.md
.github/workflows/: build-windows.yml  release.yml  windows-only.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  tauri.ts
frontend/src/pages/: SearchPage.tsx  SettingsPage.tsx  TopicsPage.tsx
frontend/src/pages/components/: AnnotationsSidebar.tsx  ArchiveDetail.tsx  DocxAttachmentPreview.tsx  ExcelThumbnail.tsx  ExcelViewer.tsx  PdfAllPagesViewer.tsx  PdfThumbnail.tsx  PdfViewer.tsx  TextHighlighter.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: annotations.rs  cache.rs  db.rs  docx.rs  excel_preview.rs  importer.rs  library_root.rs  main.rs  progress.rs  search.rs
