[package]
name = "archivevault"
version = "0.1.0"
description = "ArchiveVault"
authors = ["ganily"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
anyhow = "1"
calamine = "0.25"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
encoding_rs = "0.8"
jieba-rs = "0.7"
once_cell = "1"
quick-xml = "0.37"
regex = "1"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.3.1", features = ["protocol-asset"] }
time = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
